Change of Name from Chatty to Hermes Chat

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Chatty</h1>
+    <h1 class="display-4">Welcome to Hermes Chat</h1>
     <h1 class="display-4">Let's chat</h1>
     </div>
