Initial chat view created

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Chatty</h1>
-    <h1 class="display-4">Let's chat</h1>
+
+<main class="chat-part">
+    <div class="hermes-banner">
+        <h1>Hermes</h1>
     </div>
+
+    <div class="chat-window">
+        <p class="first-user">How's job?'</p>
+        <p class="second-user">Selling my soul to the devil every day for a few pennies...</p>
+        </div>
+    <div class="writing-area-for-messages">
+        <div class="grape-inner-background">
+            <input class="input" placeholder="Write your reply..."></input>
+        </div>
+    </div>
+
+
+</main>
