--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,143 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: "Gill Sans", sans-serif;
+}
+
+.main-container {
+    display: flex;
+    width: 100%;
+}
+
+.highest-part {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 60px;
+}
+
+.participants-list-column {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    height: 740px;
+    background-color: #30343f;
+    padding: 30px;
+    align-items: stretch;
+   
+}
+
+.participants-names {
+    list-style-type: circle;
+}
+
+.grouped-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+
+.chat-button {
+    color: white;
+    border-color: white;
+    border-radius: 5px;
+    background-color: #89023e;
+    height: 80px;
+    width: 120px;
+    font-weight:600;
+}
+
+
+
+.list-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    height:100%;
+    background-color: #cfdbd5;
+    position: relative;
+    border-radius: 5px;
+}
+
+.hermes-banner {
+    width: 100%;
+    height: 150px;
+    background-color: #778da9;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    display: flex;
+    padding: 14px;
+}
+
+.chat-window {
+    height: 100%;
+}
+
+.chat-part {
+    display: flex;
+    flex-direction: column;
+    height: 800px;
+    width: 100%;
+}
+
+.first-user {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    font-size: 14px;
+}
+
+
+.second-user {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    font-size: 14px;
+}
+
+.writing-area-for-messages {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    background-color: #cfdbd5;
+    justify-content: center;
+    align-items: center;
+}
+
+.grape-inner-background {
+    display: flex;
+    width: 95%;
+    height: 100px;
+    background-color: #89023e;
+}
+
+.input {
+    background-color: #89023e;
+    color: white;
+    font-family: "Gill Sans", sans-serif;
+    width: 100%;
+    font-size: 16px;
+    padding-left: 14px;
 }
