--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -4,25 +4,25 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-<ul >
-@if (SignInManager.IsSignedIn(User))
-{
-    <li >
-        <a id="manage" >Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li >
-        <form id="logoutForm" >
-            <button id="logout" type="submit" >Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li >
-        <a >Register</a>
-    </li>
-    <li >
-        <a >Login</a>
-    </li>
-}
+<ul>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li>
+            <a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        </li>
+        <li>
+            <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button id="logout" type="submit">Logout</button>
+            </form>
+        </li>
+    }
+    else
+    {
+        <li>
+            <a id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li>
+            <a id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
