--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -42,7 +42,6 @@ body {
     background-color: #30343f;
     padding: 30px;
     align-items: stretch;
-   
 }
 
 .participants-names {
@@ -63,7 +62,7 @@ body {
     background-color: #89023e;
     height: 80px;
     width: 120px;
-    font-weight:600;
+    font-weight: 600;
 }
 
 
@@ -73,14 +72,13 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    height:100%;
+    height: 100%;
     background-color: #cfdbd5;
     position: relative;
     border-radius: 5px;
 }
 
 .hermes-banner {
-    width: 100%;
     height: 150px;
     background-color: #778da9;
     font-family: Arial, Helvetica, sans-serif;
@@ -140,4 +138,32 @@ body {
     width: 100%;
     font-size: 16px;
     padding-left: 14px;
+}
+
+.profile-main {
+    display: flex;
+    width: 100%;
+    border: 15px solid #89023e;
+    background-color: #cfdbd5
+}
+
+.info-box {
+    display: flex;
+    margin-top: 30px;
+}
+
+
+.avatar {
+    display: flex;
+    width: 30%;
+    height: auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.status {
+    color: #89023e;
+    font-weight: 600;
 }
