First models created, description for SendMessage method added to User model

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using HermesChat_TeamA.Areas.Identity.Data
+﻿@using HermesChat_TeamA.Areas.Identity.Data.Models;
+@using Microsoft.AspNetCore.Identity;
+
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
