The private chat logic added; the functionality of sending messages is working

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
         <div class="grape-inner-background">
 
             <div>Connection Id</div>
-            <div><span id="connectionId"></span></div>
+            <div><span id="connectionId" /></div>
             
 
             <div><input class="input" placeholder="Write your name..." type="text" id="userInput" /></div>
