Sending messages (to all and private ones) is working

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="highest-part">
-            <h4>Let's Chat!</h4>
+            <h4 onclick="history.back()">Let's Chat!</h4>
             <a asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
             @* <button
             aria-expanded="false" aria-label="Toggle navigation">
