--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,30 +13,30 @@
         @* <div class="first-user">User</div> *@
         @* <div class="second-user">Selling my soul to the devil every day for a few pennies...</div> *@
 
-        
-            <ul id="messagesList"></ul>
-       
+
+        <ul id="messagesList"></ul>
+
     </div>
-    
+
 
 
     <div class="writing-area-for-messages">
-        
+
         <div class="grape-inner-background">
 
             <div>Connection Id</div>
             <div><span id="connectionId" /></div>
-            
+
 
             <div><input class="input" placeholder="Write your name..." type="text" id="userInput" /></div>
             @* <input class="input" placeholder="Write your reply..."></input> *@
 
 
-          
-            <div><input class="input" type="text" id="messageInput" placeholder="Write your reply..." /></div>
+
+            <div><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
 
             <div>Receiver Id</div>
-            <div><input type="text" id="receiverId"/></div>
+            <div><input type="text" id="receiverId" /></div>
 
             <div class="submit-button">
                 <input type="button" id="sendToParticularUser" value="Send Message" />&nbsp; &nbsp;
@@ -45,9 +45,9 @@
         </div>
     </div>
 
-  
 
-   
+
+
 </main>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
