--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,23 +24,32 @@
 
         <div class="grape-inner-background">
 
-            <div>Connection Id</div>
+            <div class="ids-fields">
+
+            <div class="connection-id">Connection Id: </div>
             <div><span id="connectionId" /></div>
 
+            <div class="connection-id">Receiver Id: </div>
+            <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
 
-            <div><input class="input" placeholder="Write your name..." type="text" id="userInput" /></div>
+            </div>
+
+            @* not seen in the page view *@
+
+            <div><input class="name-input" placeholder="Write your name..." type="text" id="userInput" /></div>
             @* <input class="input" placeholder="Write your reply..."></input> *@
 
 
+            <div class="messaging-area">
 
-            <div><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
+            <div class="message-input"><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
 
-            <div>Receiver Id</div>
-            <div><input type="text" id="receiverId" /></div>
+         
 
             <div class="submit-button">
                 <input type="button" id="sendToParticularUser" value="Send Message" />&nbsp; &nbsp;
                 <input type="button" id="sendButton" value="Send Message To All" />
+            </div>
             </div>
         </div>
     </div>
