--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -68,7 +68,7 @@ body {
 .ids-fields {
     display: flex;
     flex-direction: column;
-    padding-left: 2 15px;
+    padding: 2px 15px;
 }
 
 .connection-id {
@@ -159,7 +159,7 @@ body {
 .submit-button{
     display:flex;
     flex-direction: column;
-    padding-top: 15px;
+    padding: 15px;
 }
 
 .messaging-area{
