--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,3 +61,4 @@
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
+<script src="~/js/connectedUsers.js"></script>
