--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -13,15 +13,20 @@
             Group Chat
         </button>
     </div>
+    <div class="total">
+        <div>Connected Users: </div>
+        <div><span id="usersCount" /></div>
+    </div>
+ 
     <div class="list-area">
 
+        @*  // displayed list of users who are connected
+        *@
+        <div class="participants-names">
+            
+             <div class="online-users-list"><span id="usersOnlineConnectionId" /></div>
 
-
-        <ul class="participants-names">
-            <li>first</li>
-            <li>second</li>
-            <li>third</li>
-        </ul>
-
+        </div>
     </div>
 </div>
+
