--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -25,8 +25,12 @@
         <div class="participants-names">
             
              <div class="online-users-list"><span id="usersOnlineConnectionId" /></div>
-
+             <div>
+            <ul id="onlineUsersList"></ul>
+            </div>
         </div>
+
+        <div><span id="connectedUserId"></div>
     </div>
 </div>
 
