Interface, Singleton, Dependancy Injection

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,11 +26,11 @@
 
             <div class="ids-fields">
 
-            <div class="connection-id">Connection Id: </div>
-            <div><span id="connectionId" /></div>
+                <div class="connection-id">Connection Id: </div>
+                <div><span id="connectionId" /></div>
 
-            <div class="connection-id">Receiver Id: </div>
-            <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
+                <div class="connection-id">Receiver Id: </div>
+                <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
 
             </div>
 
@@ -42,18 +42,18 @@
 
             <div class="messaging-area">
 
-            <div class="message-input"><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
+                <div class="message-input"><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
 
-         
 
-            <div class="submit-button">
-                <input type="button" id="sendToParticularUser" value="Send Message" />&nbsp; &nbsp;
-                <input type="button" id="sendButton" value="Send Message To All" />
-            </div>
+
+                <div class="submit-button">
+                    <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
+                    <input type="button" id="JoinGroupChat" value="Group Chat" />&nbsp; &nbsp;
+                    <input type="button" id="sendButton" value="Send Message To All" />
+                </div>
             </div>
         </div>
     </div>
-
 
 
 
