--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -61,3 +61,9 @@ button.accept-policy {
     background-color: #89023e;
 
 }
+
+.join-group-button {
+    color: white;
+    border-color: white;
+    background-color: #89023e;
+}
