--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
 
                 <div class="submit-button">
                     <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
-                    <input type="button" id="JoinGroupChat" value="Group Chat" />&nbsp; &nbsp;
+                    <input type="button" id="JoinGroupChat" value="Send Message to Group Chat" />&nbsp; &nbsp;
                     <input type="button" id="sendButton" value="Send Message To All" />
                 </div>
             </div>
