all group chats are seen among connected users

--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -53,7 +53,7 @@
 
 
         <div id="newGroupChat">
-            <div>Active Group Chats: </div>
+            <div>Your Group Chats </div>
             <div>
                 <ul id="listOfGroupChats"></ul>
             </div>
