enhanced frontend a bit

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,9 +9,8 @@
     </div>
 
 
-    <div class="chat-window">
-        @* <div class="first-user">User</div> *@
-        @* <div class="second-user">Selling my soul to the devil every day for a few pennies...</div> *@
+    <div class="chat-window" style="height: 100%; overflow-y: scroll;">
+        
 
 
         <ul id="messagesList"></ul>
@@ -48,7 +47,7 @@
 
                 <div class="submit-button">
                     <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
-                    <input type="button" id="JoinGroupChat" value="Send Message to Group Chat" />&nbsp; &nbsp;
+                    <input type="button" id="sendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
                     <input type="button" id="sendButton" value="Send Message To All" />
                 </div>
             </div>
