split unique users displayed in a list area

--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -40,12 +40,16 @@
         <div class="participants-names">
 
             <div class="online-users-list"><span id="usersOnlineConnectionId" /></div>
-            <div>
-                <ul id="onlineUsersList"></ul>
-            </div>
+
+
+            <ul>
+                @* <li id="onlineUsersList"></li> *@
+                <li><span id="connectedUserId" /></li>
+            </ul>
+            
         </div>
 
-        <div><span id="connectedUserId" /></div>
+        
 
 
         <div id="newGroupChat">
