--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -4,17 +4,21 @@
 @{
     
 }
+@using HermesChat_TeamA.Areas.Identity.Data.Models;
+@using Microsoft.AspNetCore.Identity;
 
+
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <div class="profile-main">
     <div class="avatar" style="background-image: url('/Images/jinx.png')" alt="User's Avatar"></div>
-    <h5 class=
 
     
     <div class="info-box">
         <ul>
-            <li>Name</li>
-            <li>Surname</li>
+            <li>Name: @UserManager.GetUserName(User)!</li>
+            <li><a id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage your account</a></li>
             <li class="status">Status: Passionate about tech</li>
         </ul>
     </div>
