--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,8 +13,9 @@
         </li>
         <li>
             <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit">Logout</button>
+                <button id="logout" type="submit">Logout</button> <a asp-area="" asp-controller="Home" asp-action="Profile"> Profile</a>
             </form>
+            
         </li>
     }
     else
