I can select connected users

--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -60,9 +60,11 @@
             
         </div>
 
+        @* chosen by clicking with a mouse *@
+        <input id="jsResultUserName" type="text" value=""/>
 
-
-
+        <input id="jsResulGroupName" type="text" value="" />
+        
         <div>
 
         </div>
