--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -61,9 +61,9 @@
         </div>
 
         @* chosen by clicking with a mouse *@
-        <input id="jsResultUserName" type="text" value=""/>
+        <input hidden id="jsResultUserName" type="text" value=""/>
 
-        <input id="jsResulGroupName" type="text" value="" />
+        <input hidden id="jsResultGroupName" type="text" value="" />
         
         <div>
 
