--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -34,6 +34,10 @@ body {
     height: 60px;
 }
 
+.hoverEffect:hover {
+    color: #89023e;
+    cursor: pointer;
+}
 .participants-list-column {
     display: flex;
     flex-direction: column;
