--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,61 +2,80 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-<main class="chat-part">
-    <div class="hermes-banner">
-        <h1>Hermes</h1>
-    </div>
+@using HermesChat_TeamA.Areas.Identity.Data.Models;
+@using Microsoft.AspNetCore.Identity;
 
 
-    <div class="chat-window" style="height: 100%; overflow-y: scroll;">
-        
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 
-        <ul id="messagesList"></ul>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <main class="chat-part">
+            <div class="hermes-banner">
+                <h1>Hermes</h1>
+            </div>
 
-    </div>
+
+            <div class="chat-window" style="height: 100%; overflow-y: scroll;">
 
 
 
-    <div class="writing-area-for-messages">
-
-        <div class="grape-inner-background">
-
-            <div class="ids-fields">
-
-                <div class="connection-id">Connection Id: </div>
-                <div><span id="connectionId" /></div>
-
-                <div class="connection-id">Receiver Id: </div>
-                <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
+                <ul id="messagesList"></ul>
 
             </div>
 
-            @* not seen in the page view *@
-
-            <div><input class="name-input" placeholder="Write your name..." type="text" id="userInput" /></div>
-            @* <input class="input" placeholder="Write your reply..."></input> *@
 
 
-            <div class="messaging-area">
+            <div class="writing-area-for-messages">
 
-                <div class="message-input"><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
+                <div class="grape-inner-background">
+
+                    <div class="ids-fields">
+
+                        <div class="connection-id">Connection Id: </div>
+                        <div><span id="connectionId" /></div>
+
+                        <div class="connection-id">Receiver Id: </div>
+                        <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
+
+                    </div>
+
+                    @* not seen in the page view *@
+
+                    <div><input class="name-input" placeholder="Write your name..." type="text" id="userInput" /></div>
+                    @* <input class="input" placeholder="Write your reply..."></input> *@
+
+
+                    <div class="messaging-area">
+
+                        <div class="message-input"><input class="input" type="text" id="messageInput" placeholder="Write your reply..." onfocus="this.value =' '" /></div>
 
 
 
-                <div class="submit-button">
-                    <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
-                    <input type="button" id="sendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
-                    <input type="button" id="sendButton" value="Send Message To All" />
+                        <div class="submit-button">
+                            <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
+                            <input type="button" id="sendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
+                            <input type="button" id="sendButton" value="Send Message To All" />
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
 
 
-</main>
+        </main>
+    }
+    else
+    {
+      <h1>Welcome to HERMES chat! ;) </h1>
+      <p>Please log in. Are you new here? Join a bunch of cool people by registering!</p>
+    }
+
+
+
+
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
