--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
 
                         <div class="submit-button">
                             <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
-                            <input type="button" id="sendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
+                            <input type="button" id="SendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
                             <input type="button" id="sendButton" value="Send Message To All" />
                         </div>
                     </div>
