--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -72,7 +72,7 @@
 
         @* chosen by clicking with a mouse *@
         <input hidden id="jsResultUserName" type="text" value=""/>
-
+                <input hidden id="jsResultGroupName" type="text" value="" />
                 <div>
                 </div>
             </div>
