--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -34,15 +34,15 @@
                 <div><span id="usersCount" /></div>
             </div>
 
-            <div class="list-area" style="auto: 100px; overflow-y: scroll;">
+            <div class="list-area" style="overflow-y: scroll;">
 
 
                 <div class="participants-names">
 
                     <div class="online-users-list"><span id="usersOnlineConnectionId" /></div>
 
-                    <ul style="list-style-type:none;">
-                        <li><span id="connectedUserId" /></li>
+                    <ul style="list-style-type:none">
+                        <li><span id="connectedUserId"></span></li>
                     </ul>
 
                 </div>
