--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
                         <div class="submit-button">
                             <input type="button" id="sendToParticularUser" value="Send Message Privately" />&nbsp; &nbsp;
                             <input type="button" id="SendMessageToGroup" value="Send Message to Group Chat" />&nbsp; &nbsp;
-                            <input type="button" id="sendButton" value="Send Message To All" />
+                            @* <input type="button" id="sendButton" value="Send Message To All" /> *@
                         </div>
                     </div>
                 </div>
