Fixed NullReferenceException regarding the 'receive'

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,8 +37,8 @@
                         <div class="connection-id">Connection Id: </div>
                         <div><span id="connectionId" /></div>
 
-                        <div class="connection-id">Receiver Id: </div>
-                        <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div>
+                        @* <div class="connection-id">Receiver Id: </div>
+                        <div><input class="input" placeholder="Copy the connection ID..." type="text" id="receiverId" /></div> *@
 
                     </div>
 
